saved file again

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>Bootstrap</title>
 </head>
-<title>COOL Background!</title>
+<title>pool Background</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<h1>Linga Generator</h1>
+<h1>Backgroundddddddbjbj Generator</h1>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 
@@ -21,6 +21,7 @@
     </div>
   </div>
 
+<script type="text/javascript" src=bundle.js></script>
 
 
 
