--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootstrap</title>
+	<title>Website</title>
 </head>
-<title>pool Background</title>
+<title>Cool Background</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <h1>Backgroundddddddbjbj Generator</h1>
 <link rel="stylesheet" type="text/css" href="style.css">
